[package]
name = "keys"
version = "0.1.0"
authors = ["matthew <sirtomato999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.1"
bdf = "0.6.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
rodio = "0.13.0"
image = "0.23.12"